--- a/frontend/pray.html
+++ b/frontend/pray.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-    <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="pray.css">
     </head>
     <body>
-        
+
     </body>
 </html>
