--- a/frontend/cropping.html
+++ b/frontend/cropping.html
@@ -3,14 +3,18 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/0.8.1/cropper.min.js"></script>
 
-<input type="file" accept=".png" id="input" onchange="inputChange()">
+<input type="file" accept=".png" id="input">
 <div>
     <img id="image">
 </div>
-<!-- <div>
-    <img id="image" src="https://foliotek.github.io/Croppie/demo/demo-1.jpg">
-</div> -->
+<button onclick="inputChange()">トリミングする</button>
 <div>
-    <button onclick=crop()>Crop</button>
+    <select>
+        <option>たこ焼き</option>
+        <option>カツ丼</option>
+    </select>
+</div>
+<div>
+    <button onclick=crop()>悼たみます</button>
 </div>
 <script src="cropping.js"></script>
